# fprog

./: README.md  fprog_Summary.docx
01_Intro/Assignment/: PicturesSVG.hs
02_Types/Assignment/: AS_Types.lhs
02_Types/Lecture/: WS_Tuples.lhs
03_Lists/Assignment/: PicturesASCII.hs
03_Lists/Lecture/: WS_Lists_as_Models.lhs
04_Functions/Assignment/: functions.hs
04_Functions/Lecture/: WS_Bindings.hs  WS_ConditionalBranching.hs  WS_PatternMatching.hs
05_FunctionsII/Assignment/: AS_FunctionII.hs
05_FunctionsII/Lecture/: WS_LambdaExpressions.hs
06_Recursion/Assignment/: AS_Recursion.hs
06_Recursion/Assignment/recdiagrams/: Main.hs  recdiagrams.cabal
06_Recursion/Lecture/: Sort.hs  WS_Recursion1.hs  WS_Recursion2.hs  insertionsort.hs
07_Lab/Lecture/: HTest.hs  WS_Java_Haskell.hs
09_Datatypes/Assignment/: AS_ArithmeticExpressions.lhs
09_Datatypes/Lecture/: WS_HandlingFailure.hs  WS_Shapes.lhs
10_IO/Assignment/: taskList.hs
10_IO/Lecture/: Args.hs  FirstIO.hs  MiniCalc.hs  hcp.hs  in.txt
10_IO/Lecture/WS_Webclient/: Main.hs  WS-Webclient.cabal
11_Typeclasses_Modules/Assignment/: AS_JSON.lhs
11_Typeclasses_Modules/Lecture/: WS_MovableShapes.lhs
13_Higher_Order_Functions/Assignment/: AS_Folds.lhs
13_Higher_Order_Functions/Lecture/: folds.lhs
Training/: Playgound.hs
hgrade-assigment/: README.md  hgrade.cabal  note.csv
hgrade-assigment/app/: Main.hs
hgrade-assigment/grading/: README.md  grading.csv
hgrade-assigment/lib/: Hgrade.hs
hgrade-assigment/static/: styles.css
hgrade-assigment/test/: HgradeTest.hs
(+8 files in other folders)
