name:                recdiagrams
version:             0.1.0.0
synopsis:            Assigment 6: Recursion
maintainer:          daniel.kroeni@fhnw.ch
build-type:          Simple
cabal-version:       >=1.10

executable recdiagrams
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       diagrams-core, 
                       diagrams-lib,
                       diagrams-svg
