cabal-version:       >=1.10
name:                WS-Webclient
version:             0.1.0.0
author:              Daniel Kröni
maintainer:          daniel.kroeni@fhnw.ch
build-type:          Simple

executable webclient
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                      ,HTTP
  default-language:    Haskell2010
